--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="game_page hide page" onclick = "jump()">
             <div class="game_div">
               <div class="heading3">
-                 <p id="game_name">Welcome to Taha-Flappy Rejection Rampage</p>
+                 <p id="game_name">Welcome to Taha:Flappy Rejection Rampage</p>
               </div>   
               <div class="game_score">
                     <p id="Highest_score" class="score">Highest: <span id="highest_span">0</span></p>
@@ -129,4 +129,5 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script type = "module" src="script.js"></script>
 </body>
+
 </html>
